--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,9 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   animated_text_kit: ^4.2.2
+  firebase_core: ^2.25.2
+  firebase_auth: ^4.17.2
+  modal_progress_hud_alt: ^1.0.0
 
 dev_dependencies:
   flutter_test:
