--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   firebase_core: ^2.25.2
   firebase_auth: ^4.17.2
   modal_progress_hud_alt: ^1.0.0
+  cloud_firestore: ^4.15.2
 
 dev_dependencies:
   flutter_test:
