--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,15 @@ dependencies:
   firebase_auth: ^4.17.2
   modal_progress_hud_alt: ^1.0.0
   cloud_firestore: ^4.15.2
+  flutter_local_notifications: ^16.3.2
+  firebase_messaging: ^14.7.14
+  http: ^1.2.0
+  awesome_notifications: ^0.9.2
+
+
+
+
+
 
 dev_dependencies:
   flutter_test:
